<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GradesFragment" >

    <TextView
        android:id="@+id/gpaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="32dp"
        android:text="@string/gpaTextView"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gpaValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/gpaValueTextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/gpaTextView"
        app:layout_constraintStart_toEndOf="@+id/gpaTextView" />

    <TextView
        android:id="@+id/hoursTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hoursTextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/gpaTextView"
        app:layout_constraintTop_toBottomOf="@+id/gpaTextView" />

    <TextView
        android:id="@+id/hoursValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/hoursValueTextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/hoursTextView"
        app:layout_constraintStart_toEndOf="@+id/hoursTextView" />

    <TextView
        android:id="@+id/coursesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/coursesTextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/courseListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coursesTextView"
        tools:layout_editor_absoluteX="188dp" />

</androidx.constraintlayout.widget.ConstraintLayout>